grammar.js
    program: ($) =>
      seq(
        // any number of transactions, statements, or blocks with a terminating ;
        repeat(seq(choice($.transaction, $.statement, $.block), ';')),
        // optionally, a single statement without a terminating ;
        optional($.statement)
      ),

    keyword_replace: (_) => make_keyword('replace'),
    keyword_create: (_) => make_keyword('create'),
    keyword_as: (_) => make_keyword('as'),
    keyword_end: (_) => make_keyword('end'),
    keyword_or: (_) => make_keyword('or'),
    keyword_for: (_) => make_keyword('for'),
    keyword_begin: (_) => make_keyword('begin'),
    keyword_trigger: (_) => make_keyword('trigger'),
    keyword_function: (_) => make_keyword('function'),
    keyword_returns: (_) => make_keyword('returns'),
    keyword_return: (_) => make_keyword('return'),
    keyword_language: (_) => make_keyword('language'),
    keyword_returns: (_) => make_keyword('returns'),
    _or_replace: ($) => seq($.keyword_or, $.keyword_replace),
    keyword_text: (_) => make_keyword('text'),
    _type: ($) =>
      prec.left(
        seq(
          choice(
            $.keyword_boolean,
            $.bit,
            $.binary,
            $.varbinary,
            $.keyword_image,

            $.keyword_smallserial,
            $.keyword_serial,
            $.keyword_bigserial,

            $.tinyint,
            $.smallint,
            $.mediumint,
            $.int,
            $.bigint,
            $.decimal,
            $.numeric,
            $.double,
            $.float,

            $.keyword_money,
            $.keyword_smallmoney,

            $.char,
            $.varchar,
            $.nchar,
            $.nvarchar,
            $.numeric,
            $.keyword_string,
            $.keyword_text,

            $.keyword_uuid,

            $.keyword_json,
            $.keyword_jsonb,
            $.keyword_xml,

            $.keyword_bytea,
            $.keyword_inet,

            $.enum,

            $.keyword_date,
            $.keyword_datetime,
            $.keyword_datetime2,
            $.datetimeoffset,
            $.keyword_smalldatetime,
            $.time,
            $.timestamp,
            $.keyword_timestamptz,
            $.keyword_interval,

            $.keyword_geometry,
            $.keyword_geography,
            $.keyword_box2d,
            $.keyword_box3d,

            $.keyword_oid,
            $.keyword_name,
            $.keyword_regclass,
            $.keyword_regnamespace,
            $.keyword_regproc,
            $.keyword_regtype,

            field('custom_type', $.object_reference)
          ),
          optional($.array_size_definition)
        )
      ),

    statement: ($) =>
      seq(
        optional(seq($.keyword_explain, optional($.keyword_analyze), optional($.keyword_verbose))),
        choice($._ddl_statement, $._dml_write, optional_parenthesis($._dml_read))
      ),

    _ddl_statement: ($) =>
      choice(
        $._create_statement,
        $._alter_statement,
        $._drop_statement,
        $._rename_statement,
        $._optimize_statement,
        $._merge_statement,
        $.comment_statement,
        $.set_statement,
        $.reset_statement
      ),

    _dml_write: ($) =>
      seq(
        seq(
          optional($._cte),
          choice(
            $._delete_statement,
            $._insert_statement,
            $._update_statement,
            $._truncate_statement,
            $._copy_statement
          )
        )
      ),

    _dml_read: ($) =>
      seq(
        optional(optional_parenthesis($._cte)),
        optional_parenthesis(choice($._select_statement, $.set_operation))
      ),

    function_arguments: ($) => paren_list($.function_argument, false),

    dollar_quote: () => /\$[^\$]*\$/,

    create_function: ($) =>
      seq(
        $.keyword_create,
        optional($._or_replace),
        $.keyword_function,
        $.object_reference,
        $.function_arguments,
        $.keyword_returns,
        choice(
          $._type,
          seq($.keyword_setof, $._type),
          seq($.keyword_table, $.column_definitions),
          $.keyword_trigger
        ),
        repeat(
          choice(
            $.function_language,
            $.function_volatility,
            $.function_leakproof,
            $.function_security,
            $.function_safety,
            $.function_strictness,
            $.function_cost,
            $.function_rows,
            $.function_support
          )
        ),
        // ensure that there's only one function body -- other specifiers are less
        // variable but the body can have all manner of conflicting stuff
        $.function_body,
        repeat(
          choice(
            $.function_language,
            $.function_volatility,
            $.function_leakproof,
            $.function_security,
            $.function_safety,
            $.function_strictness,
            $.function_cost,
            $.function_rows,
            $.function_support
          )
        )
      ),

    _function_return: ($) => seq($.keyword_return, $._expression),

    _function_body_statement: ($) => choice($.statement, $._function_return),

    function_body: ($) =>
      choice(
        seq($._function_return, ';'),
        seq(
          $.keyword_begin,
          $.keyword_atomic,
          repeat1(seq($._function_body_statement, ';')),
          $.keyword_end
        ),
        seq(
          $.keyword_as,
          alias($._dollar_quoted_string_start_tag, $.dollar_quote),
          optional(seq($.keyword_declare, repeat1($.function_declaration))),
          $.keyword_begin,
          repeat1(seq($._function_body_statement, ';')),
          $.keyword_end,
          optional(';'),
          alias($._dollar_quoted_string_end_tag, $.dollar_quote)
        ),
        seq($.keyword_as, alias(choice($._single_quote_string, $._double_quote_string), $.literal)),
        seq(
          $.keyword_as,
          alias($._dollar_quoted_string_start_tag, $.dollar_quote),
          $._function_body_statement,
          optional(';'),
          alias($._dollar_quoted_string_end_tag, $.dollar_quote)
        )
      ),

    function_language: ($) =>
      seq(
        $.keyword_language,
        // TODO Maybe we should do different version of function_body_statement in
        // regard to the defined language to match either sql, plsql or
        // plpgsql. Currently the function_body_statement support only sql.  And
        // maybe for other language the function_body should be a string.
        $.identifier
      ),

    object_reference: ($) =>
      seq(optional(seq(field('schema', $.identifier), '.')), field('name', $.identifier)),

    field: ($) => field('name', $.identifier),

    literal: ($) =>
      prec(
        2,
        choice(
          $._integer,
          $._decimal_number,
          $._literal_string,
          $._bit_string,
          $._string_casting,
          $.keyword_true,
          $.keyword_false,
          $.keyword_null
        )
      ),
    _double_quote_string: (_) => /"[^"]*"/,
    // The norm specify that between two consecutive string must be a return,
    // but this is good enough.
    _single_quote_string: (_) => seq(/([uU]&)?'([^']|'')*'/, repeat(/'([^']|'')*'/)),
    _literal_string: ($) =>
      prec(
        1,
        choice(
          $._single_quote_string,
          $._double_quote_string,
          alias(
            seq(
              field('tag', $._dollar_quoted_string_start_tag_label),
              field('value', $._dollar_quoted_string),
              $._dollar_quoted_string_end_tag
            ),
            $.string
          )
        )
      ),
    _integer: ($) =>
      seq(
        optional(choice('-', '+')),
        /(0[xX][0-9A-Fa-f]+(_[0-9A-Fa-f]+)*)|(0[oO][0-7]+(_[0-7]+)*)|(0[bB][01]+(_[01]+)*)|(\d+(_\d+)*(e[+-]?\d+(_\d+)*)?)/
      ),
    _decimal_number: ($) =>
      seq(
        optional(choice('-', '+')),
        /((\d+(_\d+)*)?[.]\d+(_\d+)*(e[+-]?\d+(_\d+)*)?)|(\d+(_\d+)*[.](e[+-]?\d+(_\d+)*)?)/
      ),
    _bit_string: ($) => seq(/[bBxX]'([^']|'')*'/, repeat(/'([^']|'')*'/)),
    // The identifier should be followed by a string (no parenthesis allowed)
    _string_casting: ($) => seq($.identifier, $._single_quote_string),

    identifier: ($) => choice($._identifier, $._double_quote_string, /`([a-zA-Z_][0-9a-zA-Z_]*)`/),
    _identifier: (_) => /[a-zA-Z_][0-9a-zA-Z_]*/
  }
});

function unsigned_type($, type) {
  return choice(
    seq($.keyword_unsigned, type),
    seq(type, optional($.keyword_unsigned), optional($.keyword_zerofill))
  );
}

function optional_parenthesis(node) {
  return prec.right(choice(node, wrapped_in_parenthesis(node)));
}

function wrapped_in_parenthesis(node) {
  if (node) {
    return seq('(', node, ')');
  }
  return seq('(', ')');
}

function parametric_type($, type, params = ['size']) {
  return prec.right(
    1,
    choice(
      type,
      seq(
        type,
        wrapped_in_parenthesis(
          seq(
            // first parameter is guaranteed, shift it out of the array
            field(params.shift(), alias($._natural_number, $.literal)),
            // then, fill in the ", next" until done
            ...params.map((p) => seq(',', field(p, alias($._natural_number, $.literal))))
          )
        )
      )
    )
  );
}

function comma_list(field, requireFirst) {
  sequence = seq(field, repeat(seq(',', field)));

  if (requireFirst) {
    return sequence;
  }

  return optional(sequence);
}

function paren_list(field, requireFirst) {
  return wrapped_in_parenthesis(comma_list(field, requireFirst));
}

function make_keyword(word) {
  str = '';
  for (var i = 0; i < word.length; i++) {
    str = str + '[' + word.charAt(i).toLowerCase() + word.charAt(i).toUpperCase() + ']';
  }
  return new RegExp(str);
}
